welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: not found: value ||
if (a<=19 && a>=13) || (b<=19 && a>= 13) {19}
                    ^